# the-yields

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  package.json
.github/: CODEOWNERS  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260320_938beee1a35d_initial_schema.py  20260320_b4f812c9d1e2_add_tickers_table_and_update_goals.py  20260322_c3e1f7a29b4d_add_subscription_plan_to_users.py  20260323_d7a4e9b12f8c_add_currency_to_users.py
backend/app/: config.py  limiter.py  logging_config.py  main.py  repository.py  router.py  service.py  utils.py
backend/app/api/: __init__.py  auth.py
backend/app/api/depots/: router.py  schemas.py
backend/app/api/feedback/: router.py  schemas.py  service.py
backend/app/api/finance/: db_repository.py  dependencies.py  repository.py  router.py  s3_repository.py  schemas.py  service.py  utils.py
backend/app/core/: __init__.py  config.py  enums.py  limiter.py  logging_config.py  tickers.py  utils.py
backend/app/db/: models.py  session.py
backend/app/middleware/: logging.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_auth.py  test_db_repository.py  test_finance.py  test_models.py  test_users.py
backend/tests/integration/: test_db_repository.py  test_depots.py  test_init.py  test_models.py
backend/tests/unit/: test_auth.py  test_finance.py  test_subscription.py  test_users.py
(+148 files in other folders)
