[project]
name = "the-yield-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.1",
  "pydantic-settings>=2.13.1",
  "uvicorn>=0.41.0",
  "boto3>=1.34",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["__init__.py", "data/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
