[project]
name = "the-yields-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.1",
  "pydantic-settings>=2.13.1",
  "uvicorn>=0.41.0",
  "boto3>=1.34",
  "stripe>=10.0",
  "ruff>=0.15.5",
  "pyjwt[crypto]>=2.8",
  "slowapi>=0.1.9",
  "structlog>=25.5.0",
  "cachetools>=5.3",
  "pydantic[email]>=2.12.5",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["__init__.py", "data/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
